src/component/scroll_view/snapshots/envision__component__scroll_view__tests__view_minimal_area.snap
---
source: src/component/scroll_view/tests.rs
expression: terminal.backend().to_string()
---
┌T┐                                     
│ │                                     
└─┘
